Se implementó try-with-resources, para facilitar la gestión de recursos y garantizar que se cierren automáticamente